# mcp-unifi-applications

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mcp_server.py  pyproject.toml  scrape.mjs
.github/workflows/: ci.yml
docs/: _index.json  connectorget.json  connectorpatch.json  connectorpost.json  connectorput.json  creatednspolicy.json  createvouchers.json  deleteaclrule.json  deletefirewallzone.json  deletenetwork.json  deletetrafficmatchinglist.json  deletevouchers.json  error-handling.json  executeportaction.json  getaclrule.json  getaclruleordering.json  getaclrulepage.json  getconnectedclientdetails.json  getdnspolicy.json  getfirewallpolicies.json  getnetworkdetails.json  getnetworkreferences.json  getnetworksoverviewpage.json  getsiteoverviewpage.json  getsitetositevpntunnelpage.json  gettingstarted.json  gettrafficmatchinglist.json  getvoucher.json  getwansoverviewpage.json  quick_start.ansible.json  removedevice.json  updateaclrule.json  updatednspolicy.json  updatefirewallzone.json  updatetrafficmatchinglist.json
docs/network/: adoptdevice.json  connectordelete.json  createaclrule.json  createfirewallpolicy.json  createfirewallzone.json  createnetwork.json  createtrafficmatchinglist.json  createwifibroadcast.json  deletednspolicy.json  deletefirewallpolicy.json  deletevoucher.json  deletewifibroadcast.json  executeadopteddeviceaction.json  executeconnectedclientaction.json  filtering.json  getadopteddevicedetails.json  getadopteddevicelateststatistics.json  getadopteddeviceoverviewpage.json  getcountries.json  (+23 more)
tests/: test_mcp_server.py
(+64 files in other folders)
